--- a/ExamSolution/DAL/DAL.csproj
+++ b/ExamSolution/DAL/DAL.csproj
@@ -8,4 +8,13 @@
     <ProjectReference Include="..\BE\BE.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="MySqlConnector">
+      <HintPath>..\..\..\..\..\.nuget\packages\mysqlconnector\0.30.0\lib\netstandard2.0\MySqlConnector.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Data.SqlClient">
+      <HintPath>..\..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\system.data.sqlclient\4.4.3\ref\netstandard2.0\System.Data.SqlClient.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
